# SGE

./: .gitignore  CMakeLists.txt
CGFX/: CGFX.hpp  CMakeLists.txt
CGFX/Assets/: AssetStore.hpp  Texture2D.hpp
CGFX/Core/: AlgorithmExtension.hpp  Assertions.hpp  Camera2D.hpp  Core.hpp  EnumFlag.hpp  Keys.hpp  Logger.hpp  Macros.hpp  Math.hpp  Memory.hpp  Reflection.hpp  StringId.cpp  StringId.hpp
CGFX/Core/detail/: MurmurHash3.hpp
CGFX/ECS/: Component.hpp  ECS.hpp  Entity.hpp  Exception.hpp  Registry.cpp  Registry.hpp  System.hpp
CGFX/ECS/Components/: BoxCollider.hpp  CameraTracker.hpp  DebugComponent.hpp  KeyboardControllable.hpp  RigidBodyComponent.hpp  SpriteComponent.hpp  TransformComponent.hpp
CGFX/Event/: EventBus.hpp
CGFX/Event/Events/: CollisionEvent.hpp  InputEvents.hpp
CGFX/Game/: Game.cpp  Game.hpp
CGFX/Platform/: Platform.hpp  StringId.cpp  StringId.hpp
CGFX/Systems/: AnimationSystem.cpp  AnimationSystem.hpp  CameraSystem.cpp  CameraSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  InputLoggerSystem.cpp  InputLoggerSystem.hpp  KeyboardControlSystem.cpp  KeyboardControlSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp
CGFX/Systems/detail/: BoxColliderTransform.hpp
Games/: CMakeLists.txt
Games/FrogTD/: CMakeLists.txt  FrogTDGame.hpp  Main.cpp
Games/FrogTD/GameAssets/: wasteland_tilemap.layout
